--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ReportPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ReportPage.xaml
@@ -4,5 +4,18 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.ReportPage">
+
+    <StackLayout BackgroundColor="Transparent">
+
+        <Frame BackgroundColor="Black">
+            <Image Source="">
+                
+                
+            </Image>
+            
+        </Frame>
+        
+        
+    </StackLayout>
   
 </ContentPage>
