--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LoginPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LoginPage.xaml
@@ -31,13 +31,13 @@
             <StackLayout BackgroundColor="Transparent" Padding="40" Spacing="20" Margin="0,0,0,0">
                 <Grid BackgroundColor="Transparent">
                     <Entry Placeholder="Email address" HeightRequest="60"
-                       TextColor="DarkSlateGray" PlaceholderColor="#5C6898" />
+                       TextColor="DarkSlateGray" PlaceholderColor="#5C6898" Text="{Binding EmailAddress}" />
                     <Image Source="emailicon" Margin="265,0,0,0">
                     </Image>
                 </Grid>
                 <Grid>
                     <Entry Placeholder="Password" HeightRequest="60"
-                       TextColor="DarkSlateGray" PlaceholderColor="#5C6898"/>
+                       TextColor="DarkSlateGray" PlaceholderColor="#5C6898" Text="{Binding Password}"/>
                     <Image Source="Hiddenicon" Margin="265,0,0,0">
                     </Image>
                 </Grid>
