--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
@@ -62,7 +62,7 @@
         
         <Frame BackgroundColor="Transparent" Padding="-131,10,-25,-5"  >
 
-            <Grid  VerticalOptions="Center" Margin="150,-20,-100,45" >
+            <Grid  VerticalOptions="Center" Margin="150,-25,-100,50" >
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="172," />
@@ -106,7 +106,7 @@
                 Command="{Binding VariousTypeBtnCommand}"/>
 
                 <BoxView Grid.Row="1"
-                 Color="#AAE1EB" CornerRadius="20"  Margin="10,5,0,15"    />
+                 Color="#FDB3CA" CornerRadius="20"  Margin="10,5,0,15"    />
                 <Button Grid.Row="1"
                Text="Signs and Symptoms"
                HorizontalOptions="Center"
