--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
@@ -46,13 +46,15 @@
 
                         <StackLayout Grid.Row="3" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
                             <Entry Placeholder="Password" FontSize="18" FontAttributes="None" x:Name="EntryPassword"
-                                   PlaceholderColor="#5C6898" TextColor="DarkSlateGray" />
+                                  
+                                   IsPassword="True" TextColor="DarkSlateGray" PlaceholderColor="#5C6898"/>
                             <Label Text="{Binding Password}" TextColor="Black" HorizontalOptions="Center"/>
                         </StackLayout>
 
                         <StackLayout Grid.Row="4" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
                             <Entry Placeholder="Confirm Password" FontSize="18" FontAttributes="None" x:Name="EntryConfirmPassword" 
-                                   PlaceholderColor="#5C6898" TextColor="DarkSlateGray" />
+                                   
+                                   IsPassword="True" TextColor="DarkSlateGray" PlaceholderColor="#5C6898"/>
                             <Label Text="{Binding ConfirmPassword }" TextColor="Black" HorizontalOptions="Center"/>
                         </StackLayout>
 
