--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/VariousTypePage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/VariousTypePage.xaml
@@ -22,7 +22,7 @@
                              HeightRequest="60"
                              WidthRequest="350" 
                             TextColor="White"
-                       BackgroundColor="#5ED7F2"
+                       BackgroundColor="#5C6898"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
                             Command="{Binding PtsdTypeBtnCommand}"
@@ -40,7 +40,7 @@
                              HeightRequest="60"
                              WidthRequest="350" 
                             TextColor="White"
-                       BackgroundColor="#AAE1EB"
+                       BackgroundColor="#FDB3CA"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
                           Command="{Binding AnxietyTypeBtnCommand}"
@@ -58,7 +58,7 @@
                              HeightRequest="60"
                              WidthRequest="350" 
                             TextColor="White"
-                       BackgroundColor="#5ED7F2"
+                       BackgroundColor="#5C6898"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
                             Command="{Binding DepressionTypeBtnCommand}"
@@ -75,7 +75,7 @@
                              HeightRequest="60"
                              WidthRequest="350" 
                             TextColor="White"
-                       BackgroundColor="#AAE1EB"
+                       BackgroundColor="#FDB3CA"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
                             Command="{Binding DbdTypeBtnCommand}"
