--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsList.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsList.xaml
@@ -1,8 +1,50 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:prism="http://prismlibrary.com"
+             xmlns:prism="http://prismlibrary.com" xmlns:soteriaapp="clr-namespace:SoteriaApp.ViewModels"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.LearnerDetailsList">
-  
+    <ContentPage.Content>
+        <StackLayout>
+            <Frame BackgroundColor="#5C6898" Padding="12" CornerRadius="0">
+                <StackLayout Orientation="Horizontal">
+                    <Label Padding="10,0,0,0" Text="Class List" HorizontalTextAlignment="Center" TextColor="White" FontSize="20" VerticalOptions="CenterAndExpand"/>
+                </StackLayout>
+            </Frame>
+            <StackLayout>
+                <ListView x:Name="LearnersDetailsPage" ItemsSource="{Binding LearnersList}" HasUnevenRows="True" SelectionMode="None">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="soteriaapp:LearnerDetailsListViewModel">
+                            <ViewCell>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="60"/>
+                                        <ColumnDefinition Width=" *"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Image Source="{Binding NameofImage}" Aspect="Fill" Grid.RowSpan="3" HeightRequest="50" WidthRequest="50" Margin ="2"/>
+                                    <Label Text="{Binding NameOfLearner}" FontSize="16" FontAttributes="Bold" Grid.Column="1"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+               
+            </StackLayout>
+        </StackLayout>
+    </ContentPage.Content>
+
+
+
+
+
+
+
+
+
 </ContentPage>
