Added button to Learner Details List

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsList.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsList.xaml
@@ -34,7 +34,13 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-               
+
+                <Button  ImageSource="AddLearnericon"
+                                 CornerRadius="360"
+                                 HorizontalOptions="EndAndExpand"
+                             BackgroundColor="Transparent" Command="{Binding LearnerDetailsBtn}"
+                >
+                </Button>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
