Added button to Dbd on influences page

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InfluencesPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InfluencesPage.xaml
@@ -78,6 +78,7 @@
                        BackgroundColor="#FDB3CA"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
+                            Command="{Binding DbdPage2Btn }"
                             
                            
                        />
