Added button to Depression on influences Page

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InfluencesPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InfluencesPage.xaml
@@ -61,7 +61,7 @@
                        BackgroundColor="#5C6898"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
-                            
+                            Command="{Binding DepPage2Btn}"
                            
                        />
                 </Frame>
