--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsPage.xaml
@@ -6,17 +6,98 @@
              x:Class="SoteriaApp.Views.LearnerDetailsPage">
 
 
-    <StackLayout>
+    <ContentPage.Content>
+        <ScrollView>
+            <StackLayout Padding="0,100,0,0">
+                <Frame BackgroundColor="Transparent">
+                    <Label Text="Learner Details" FontSize="20" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+                </Frame>
+                <Frame BackgroundColor="Transparent">
+                    <Grid Margin="0,-33,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackLayout Grid.Row="0" Margin="0,10,0,0" Spacing="10" HeightRequest="100">
+                            <Entry Placeholder ="Full Name" FontSize="18" FontAttributes="None" Margin="0,50,0,-10"/>
+                            <Label Text="{Binding LearnerName}" TextColor="Black" HorizontalOptions="Center" />
+                        </StackLayout>
+                        <StackLayout Grid.Row="1" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Surname" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding LearnerSurname}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="2" Margin="0,10,0,0"  Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Age" FontSize="18" FontAttributes="None"  />
+                            <Label Text="{Binding LearnerAge}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="3" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Grade" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding LearnerGrade}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="4" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
+                            <Label Text="Date of Birth" TextColor="Gray" FontSize="18"/>
+                            <Entry  Text="{Binding DateOfBirth}" Placeholder="Date of Birth" FontSize="18" FontAttributes="None"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="5" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
+                            <Entry Placeholder="ID Number" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding IdNumber}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="6" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
+                            <Frame  BackgroundColor="Transparent">
+                                <Label Text="Parent Details" FontSize="20" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+                            </Frame>
+                        </StackLayout>
+                        <StackLayout Grid.Row="7" Margin="0,10,0,0" Spacing="10" HeightRequest="100">
+                            <Entry Placeholder ="First Names" FontSize="18" FontAttributes="None" Margin="0,50,0,-10"/>
+                            <Label Text="{Binding ParentName}" TextColor="Black" HorizontalOptions="Center" />
+                        </StackLayout>
+                        <StackLayout Grid.Row="8" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Surname" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding ParentSurname}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="9" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Age" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding ParentAge}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="10" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Gender" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding ParentGender}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="11" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Marital Status" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding MaritalStatus}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="12" Margin="0,10,0,0" Spacing="10" HeightRequest="50">
+                            <Entry Placeholder="Email" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding Email}" TextColor="Black" HorizontalOptions="Center"/>
+                        </StackLayout>
+                        <StackLayout Grid.Row="13" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
+                            <Entry Placeholder ="CellNumber" FontSize="18" FontAttributes="None"/>
+                            <Label Text="{Binding ParentCellNumber}" TextColor="Black" HorizontalOptions="Center" />
+                        </StackLayout>
+                    </Grid>
+                </Frame>
+                <Frame HasShadow="True" BackgroundColor="Transparent" Grid.Row="14" Margin="0,-16,0,0" >
+                    <Button  x:Name="SaveDetails" Text="Save"
+                            HeightRequest="50" BackgroundColor="#5C6898"
+                            TextColor="White" CornerRadius="5" FontFamily="Roboto-Regular.ttf"
+                            HorizontalOptions="Center" WidthRequest="320" 
+                            />
+                </Frame>
+            </StackLayout>
+        </ScrollView>
+    </ContentPage.Content>
 
-
-        <Label Text="Learner Profile" HorizontalTextAlignment="Center"  Padding="60,40,60,20"
-                                           TextColor="#5C6898" FontSize="20" 
-                                           FontFamily="FredokaOne-Regular.ttf"/>
-
-
-
-
-    </StackLayout>
-    
-  
 </ContentPage>
