--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LearnerDetailsPage.xaml
@@ -8,10 +8,16 @@
 
     <ContentPage.Content>
         <ScrollView>
+            
+            
             <StackLayout Padding="0,100,0,0">
+                
+                <!--Learner Details-->
                 <Frame BackgroundColor="Transparent">
-                    <Label Text="Learner Details" FontSize="20" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="Learner Details" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
                 </Frame>
+                
+                
                 <Frame BackgroundColor="Transparent">
                     <Grid Margin="0,-33,0,0">
                         <Grid.RowDefinitions>
@@ -54,11 +60,18 @@
                             <Entry Placeholder="ID Number" FontSize="18" FontAttributes="None"/>
                             <Label Text="{Binding IdNumber}" TextColor="Black" HorizontalOptions="Center"/>
                         </StackLayout>
+
+
+
+                        <!--Parent Details-->
                         <StackLayout Grid.Row="6" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
                             <Frame  BackgroundColor="Transparent">
-                                <Label Text="Parent Details" FontSize="20" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+                                <Label Text="Parent Details" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
                             </Frame>
                         </StackLayout>
+                        
+                        
+                        
                         <StackLayout Grid.Row="7" Margin="0,10,0,0" Spacing="10" HeightRequest="100">
                             <Entry Placeholder ="First Names" FontSize="18" FontAttributes="None" Margin="0,50,0,-10"/>
                             <Label Text="{Binding ParentName}" TextColor="Black" HorizontalOptions="Center" />
@@ -84,7 +97,7 @@
                             <Label Text="{Binding Email}" TextColor="Black" HorizontalOptions="Center"/>
                         </StackLayout>
                         <StackLayout Grid.Row="13" Margin="0,10,0,0" Spacing="10" HeightRequest="90">
-                            <Entry Placeholder ="CellNumber" FontSize="18" FontAttributes="None"/>
+                            <Entry Placeholder ="Cell Number" FontSize="18" FontAttributes="None"/>
                             <Label Text="{Binding ParentCellNumber}" TextColor="Black" HorizontalOptions="Center" />
                         </StackLayout>
                     </Grid>
