--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InfluencesPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InfluencesPage.xaml
@@ -5,6 +5,10 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.InfluencesPage">
     <StackLayout>
+
+        <Label Text=" INFLUENCES" HorizontalTextAlignment="Center" FontFamily="FredokaOne-Regular.ttf" TextColor="#5C6898" Margin="0,50,0,-50" FontSize="45"> 
+            
+        </Label>
         <Frame BackgroundColor="Transparent">
             <StackLayout BackgroundColor="Transparent"
                          VerticalOptions="Center"
